[gd_scene load_steps=10 format=3 uid="uid://bk3suks3erdfn"]

[ext_resource type="Theme" uid="uid://bdrtfu8fmvsgk" path="res://tasks_room.tres" id="1_1d2ma"]
[ext_resource type="Script" path="res://BattleScene/battle.gd" id="1_1o5fr"]
[ext_resource type="Script" path="res://BattleScene/ToolBar.gd" id="2_10kcd"]
[ext_resource type="Texture2D" uid="uid://rfvq28qqui64" path="res://sprites/tile008.png" id="3_20k4o"]
[ext_resource type="Texture2D" uid="uid://cjcl7aott2ros" path="res://sprites/ActionPoints.png" id="4_0l78g"]
[ext_resource type="Texture2D" uid="uid://dx6t3yhacctbk" path="res://sprites/ActionPoints2.png" id="5_egfy0"]
[ext_resource type="Texture2D" uid="uid://cfrokph530rbx" path="res://sprites/ActionPoints3.png" id="5_r37yw"]

[sub_resource type="Theme" id="Theme_3iy0k"]

[sub_resource type="Theme" id="Theme_3vit2"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_1d2ma")
script = ExtResource("1_1o5fr")

[node name="BattleScence" type="Node2D" parent="."]

[node name="BackGround" type="Node2D" parent="BattleScence"]

[node name="Tile008" type="Sprite2D" parent="BattleScence/BackGround"]
position = Vector2(579, 215)
scale = Vector2(3.7, 3.7)
texture = ExtResource("3_20k4o")

[node name="EntitiesTextures" type="Node2D" parent="BattleScence"]

[node name="SpeedBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 11.0
offset_right = 100.0
offset_bottom = 51.0
size_flags_horizontal = 0
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="SpeedBar"]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 27.0
show_percentage = false

[node name="ChainTexs" type="Control" parent="SpeedBar"]
anchors_preset = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 41.0
offset_bottom = 68.0

[node name="EntitesSpeeds" type="Control" parent="SpeedBar"]
anchors_preset = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 41.0
offset_bottom = 68.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_3iy0k")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Text" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Text"]
layout_mode = 2
offset_left = 3.0
offset_right = 30.0
offset_bottom = 23.0
text = "HP:"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Text"]
layout_mode = 2
offset_left = 38.0
offset_right = 62.0
offset_bottom = 28.0
text = "30"

[node name="ActionPointsBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ActionPoints" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ActionPointsBar"]
clip_contents = true
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
texture = ExtResource("4_0l78g")
expand_mode = 1
stretch_mode = 2

[node name="ActionPoints3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ActionPointsBar"]
clip_contents = true
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
texture = ExtResource("5_r37yw")
expand_mode = 1
stretch_mode = 2

[node name="ActionPoints2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ActionPointsBar"]
clip_contents = true
custom_minimum_size = Vector2(306, 34)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_egfy0")
expand_mode = 1
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cheese"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cheese"

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cheese"

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cheese"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Start"

[node name="ToolBar" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 5.0
offset_right = 26.0
offset_bottom = 33.0
script = ExtResource("2_10kcd")

[node name="MarginContainer" type="MarginContainer" parent="ToolBar"]
layout_mode = 2
theme = SubResource("Theme_3vit2")

[node name="VBoxContainer" type="VBoxContainer" parent="ToolBar/MarginContainer"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="back_ground_click"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Button" to="." method="start_actions"]
